逆転軸の移動をデバッグ

--- a/testData/config
+++ b/testData/config
@@ -1,58 +1,56 @@
 #
 x {
-  length 35000
-  pich 3200
+  pich 800
+  length 150000
   motor {
-    StepAngle 18.0
-    ExcitationMethod 12
+    StepAngle 0.9
+    ExcitationMethod 2
     pinA1 26
     pinA2 27
     pinB1 28
     pinB2 29
-    MinPPS 100
-    MaxPPS 100
+    MinPPS 800
+    MaxPPS 800
   }
-  home {
+  xxhome {
     pin 25
     pud dn
     logic false
   }
 }
 y {
-  pich 3000
-  length 37000
-#  steps 500
+  pich 800
+  length 110000
   motor {
-    StepAngle 18.0
-    ExcitationMethod 12
+    StepAngle 3.75
+    ExcitationMethod 2
     pinA1 21
     pinA2 22
     pinB1 23
     pinB2 24
-    MinPPS 400
-    MaxPPS 400
+    MinPPS 200
+    MaxPPS 200
   }
-  home {
+  xxhome {
     pin 6
     pud up
     logic false
   }
 }
 z {
-  pich 3000
+  pich 800
   length 33000
   offset -2348
-#  steps 460
   reverse true
   motor {
-    StepAngle 18.0
-    ExcitationMethod 12
+    StepAngle 3.6
+    ExcitationMethod 2
     pinA1 0
     pinA2 1
     pinB1 3
     pinB2 4
-    MinPPS 600
-    MaxPPS 600
+    MinPPS 90
+    MaxPPS 90
   }
   home {
     pin 5
